# RustAuth

./: .env  Cargo.toml  NotePad  README  README.md
migrations/: 20250508070304_create_users.sql
src/: Note  main.rs
src/auth/: mod.rs
src/db/: mod.rs
src/handlers/: mod.rs
src/models/: mod.rs
