[package]
name = "RustAuth"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
headers = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
argon2 = "0.5"
sqlx = { version = "0.8.5", features = ["runtime-tokio", "postgres", "macros", "uuid"] }
uuid = { version = "1", features = ["serde", "v4"] }
dotenvy = "0.15"
rand = "0.8"
password-hash = "0.5"
jsonwebtoken = "9.3.1"
chrono = "0.4.41"
